Melhorias no código e inserção dos try catch
