# server/app/Http/Controllers/FavoritesController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Models\MoviesCatalogFavorites;
+use Exception;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 
@@ -31,11 +32,19 @@ class FavoritesController extends Controller
      */
     public function index(): JsonResponse
     {
-        $favorites = MoviesCatalogFavorites::select('id_tmdb', 'movie_title', 'overview', 'poster_path', 'release_date', 'rating', 'created_at')
+        try {
+            $favorites = MoviesCatalogFavorites::select('id_tmdb', 'movie_title', 'overview', 'poster_path', 'release_date', 'rating', 'created_at')
             ->orderByDesc('created_at')
             ->get();
 
-        return response()->json($favorites);
+            if($favorites->isEmpty()) {
+                return response()->json(['message' => 'Nenhum filme favorito encontrado!'], 404);
+            }
+
+            return response()->json($favorites);
+        } catch (Exception $e) {
+            return response()->json(['error' => "Erro ao buscar filmes favoritos: {$e->getMessage()}"], 500);
+        }
     }
 
     /**
@@ -72,41 +81,49 @@ class FavoritesController extends Controller
      */
     public function store(Request $request): JsonResponse
     {
-        $validated = $request->validate([
-            'id_tmdb' => 'required|integer|unique:movies_catalog_favorites,id_tmdb',
-        ]);
+        try {
+            $validated = $request->validate([
+                'id_tmdb' => 'required|integer|unique:movies_catalog_favorites,id_tmdb',
+            ]);
 
-        $TMDBController = new TMDBController();
-        $movie = $TMDBController->searchById($validated['id_tmdb']);
+            $TMDBController = new TMDBController();
+            $movie = $TMDBController->searchById($validated['id_tmdb']);
 
-        if ($movie->getStatusCode() !== 200) {
-            return response()->json(['error' => 'Filme não encontrado!'], 404);
+            if ($movie->getStatusCode() !== 200) {
+                return response()->json(['error' => 'Filme não encontrado!'], 404);
+            }
+            $movie = json_decode($movie->getContent(), true);
+
+            $movieDetails = [
+                'id_tmdb' => $movie['id'],
+                'movie_title' => $movie['title'],
+                'overview' => $movie['overview'],
+                'poster_path' => $movie['poster_path'],
+                'release_date' => $movie['release_date'],
+                'rating' => $movie['vote_average'] ?? null,
+            ];
+
+            $favorite = MoviesCatalogFavorites::create($movieDetails);
+
+            return response()->json($favorite, 201);
+        } catch (Exception $e) {
+            if ($e->getCode() === 422) {
+                return response()->json(['error' => 'Erro de validação: ' . $e->getMessage()], 422);
+            }
+
+            return response()->json(['error' => "Erro ao adicionar filme aos favoritos: {$e->getMessage()}"], 500);
         }
-        $movie = json_decode($movie->getContent(), true);
-
-        $movieDetails = [
-            'id_tmdb' => $movie['id'],
-            'movie_title' => $movie['title'],
-            'overview' => $movie['overview'],
-            'poster_path' => $movie['poster_path'],
-            'release_date' => $movie['release_date'],
-            'rating' => $movie['vote_average'] ?? null,
-        ];
-
-        $favorite = MoviesCatalogFavorites::create($movieDetails);
-
-        return response()->json($favorite, 201);
     }
 
     /**
      * @OA\Delete(
-     *     path="/api/favorites/{id_tmdb}",
+     *     path="/api/favorites/{id}",
      *     summary="Remove um filme dos favoritos",
      *     tags={"Favorites"},
      *     @OA\Parameter(
-     *         name="id_tmdb",
+     *         name="id",
      *         in="path",
-     *         description="ID do filme no TMDB",
+     *         description="ID do filme",
      *         required=true,
      *         @OA\Schema(type="integer")
      *     ),
@@ -125,17 +142,23 @@ class FavoritesController extends Controller
      *             type="object",
      *             @OA\Property(property="error", type="string")
      *         )
-     *     )
+     *     ),
      * )
      */
-    public function delete(int $id_tmdb): JsonResponse
+    public function delete(int $id): JsonResponse
     {
-        $deleted = MoviesCatalogFavorites::where('id_tmdb', $id_tmdb)->delete();
+        try {
+            $favorite = MoviesCatalogFavorites::find($id);
 
-        if ($deleted) {
+            if($favorite === null) {
+                return response()->json(['message' => 'Filme não encontrado!'], 404);
+            }
+
+            MoviesCatalogFavorites::where('id', $id)->delete();
+
             return response()->json(['message' => 'Filme removido dos favoritos com sucesso!']);
+        } catch (Exception $e) {
+            return response()->json(['error' => "Erro ao remover filme dos favoritos: {$e->getMessage()}"], 500);
         }
-
-        return response()->json(['error' => 'Filme não encontrado!'], 404);
     }
 }
